# screenieAI

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: overlay-window-behavior.md
screenAI-landing/: index.html  package-lock.json  package.json  read.md
screenAI-landing/src/: App.tsx  main.tsx
screenAI-landing/src/components/: CTA.tsx  FeatureCard.tsx  Features.tsx  Footer.tsx  Hero.tsx  MagneticCrosshair.tsx  Marquee.tsx  Nav.tsx  Providers.tsx  ScanlineGrid.tsx  SpecSheet.tsx  StatsTicker.tsx  Workflow.tsx
screenAI-landing/src/components/Hero/: ChatWindow.tsx  Cursor.tsx  FakeDesktop.tsx  HotkeyChip.tsx  SelectionRect.tsx
screenAI-landing/src/lib/: copy.ts  scramble.ts  useReducedMotion.ts
screenAI-landing/src/styles/: app.css  base.css  cta.css  features.css  hero.css  magnetic.css  marquee.css  providers.css  scanline.css  spec.css  tokens.css  workflow.css
scripts/: macos-resign-dev.sh
src/: App.css  App.tsx  Chat.tsx  Overlay.tsx  main.tsx  markdown.css  overlay.css
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  rust-toolchain.toml  tauri.conf.json
src-tauri/capabilities/: default.json  overlay.json
src-tauri/icons/: icon.icns
src-tauri/src/: history.rs  lib.rs  macos_window.m  main.rs  ollama_install.rs  secrets.rs  windows_window.rs
src-tauri/src/ai/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
src-tauri/src/capture/: macos.rs  mod.rs  win.rs
src/components/: CustomDropdown.css  CustomDropdown.tsx  EditAffordance.tsx  EditCanvas.tsx  Frosted.tsx  HistoryList.tsx
src/lib/: composeEditedCrop.ts  debounce.ts  editTypes.ts  formatAiMarkdown.ts  history.ts  templates.ts  usage.ts  useEditController.ts
src/onboarding/: Onboarding.tsx  onboarding.css
src/onboarding/steps/: ApiKeys.tsx  OllamaStep.tsx  Tutorial.tsx  Welcome.tsx
src/settings/: CopyCommand.tsx  KeySection.tsx  NeedsVisionModel.tsx  OllamaSetup.tsx  ProviderTile.tsx  Section.tsx  SettingsPanel.tsx  constants.ts  preferences.ts  settings.css  styles.ts
