[package]
name = "screenieai"
version = "0.1.0"
description = "Screen AI lens — hotkey-triggered region capture + AI analysis"
authors = ["Vincent Feng"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "screenieai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
# P-F: pin to current minor so a future cargo update doesn't silently
# move us to a Tauri minor with bundler / signing behavior changes.
tauri-build = { version = "~2.6", features = [] }
cc = "1"

[dependencies]
# P-F: pinned to current minor (Tauri 2.11.x). Bump when upgrading and
# re-run the manual QA smoke before tagging a release.
tauri = { version = "~2.11", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "~2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tokio = { version = "1", features = ["process", "fs", "rt", "macros", "time"] }
image = { version = "0.25", default-features = false, features = ["png"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
keyring = { version = "3", features = ["apple-native", "windows-native"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "~2.3"

# Windows-only: WinRT + Win32 bindings.
#
# WinRT features power on-device OCR via `Windows.Media.Ocr.OcrEngine` (the
# same engine PowerToys / OneNote / Snip & Sketch use) and bitmap decoding.
#
# Win32_* features power the native overlay bridge (`windows_window.rs`):
# layered/no-activate/topmost styles, low-level keyboard/mouse hooks for
# Esc consumption and partial click-through, `SetWindowDisplayAffinity` for
# exclude-self capture, GDI BitBlt for region capture (`capture/win.rs`),
# DWM for Mica/dark-mode on the Settings window, and `ShellExecute` for the
# Ollama installer launch and the screen-capture privacy deep link.
#
# Everything is built into Windows 10+ — no extra runtime to bundle.
[target."cfg(target_os = \"windows\")".dependencies]
windows = { version = "0.58", features = [
    "Foundation",
    "Globalization",
    "Graphics_Imaging",
    "Media_Ocr",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
